3-apps/actual-budget/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: actual
  name: actual-budget
spec:
  selector:
    app: actual
  ports:
    - port: 80
      targetPort: 5006
