3-apps/actual-budget/kustomize/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.budget.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: actual-budget
          port: 80
    - match: Host(`budget.russellhost.org`) # change to your domain
      kind: Rule
      services:
        - name: actual-budget
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: russellhost-tls
